--- a/init/templates/upload.html
+++ b/init/templates/upload.html
@@ -1,5 +1,4 @@
-<!DOCTYPE html>
-<html>
+<!-- {% extends "base.html" %} {% block title %}Aclima Analyzer {% endblock %} {% block content %} -->
 
 <head>
     <title>Upload Image</title>
@@ -25,5 +24,4 @@
 
     {% else %} The extracted text will be displayed here {% endif %}
 </body>
-
-</html>
+<!-- {% endblock %} -->
