--- a/init/templates/login.html
+++ b/init/templates/login.html
@@ -10,6 +10,6 @@
         <input type="password" class="form-control" id="password" name="password" placeholder="Enter password" />
     </div>
     <br />
-    <button type="submit" class="btn btn-primary">Login</button>
+    <button type="submit" class="btn btn-primary" style=" border:#1C4870; background-color: #1C4870; ">Login</button>
 </form>
 {% endblock %}
