--- a/init/templates/base.html
+++ b/init/templates/base.html
@@ -11,42 +11,42 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar">
-            <span class="navbar-toggler-icon"></span>
+    <nav class="navbar navbar-expand-lg navbar-dark" style=" background-color: #1C4870; ">
+        <button class="navbar-toggler " type="button " data-toggle="collapse " data-target="#navbar ">
+            <span class="navbar-toggler-icon "></span>
           </button>
 
-        <div class="collapse navbar-collapse" id="navbar">
-            <div class="navbar-nav">
+        <div class="collapse navbar-collapse " id="navbar ">
+            <div class="navbar-nav ">
                 {% if user.is_authenticated %}
-                <a class="nav-item nav-link" id="logout" href="/logout">Logout</a> {% else %}
-                <a class="nav-item nav-link" id="analyzer" href="/">ML Reader</a>
-                <a class="nav-item nav-link" id="login" href="/login">Login</a>
-                <a class="nav-item nav-link" id="signUp" href="/sign-up">Sign Up</a> {% endif %}
+                <a class="nav-item nav-link " id="logout " href="/logout ">Logout</a>
+                <a class="nav-item nav-link " id="analyzer " href="/ ">ML Reader</a> {% else %}
+                <a class="nav-item nav-link " id="login " href="/login ">Login</a>
+                <a class="nav-item nav-link " id="signUp " href="/sign-up ">Sign Up</a> {% endif %}
             </div>
         </div>
     </nav>
     {% with messages = get_flashed_messages(with_categories=true) %} {% if messages %} {% for category, message in messages %} {% if category == 'error' %}
-    <div class="alert alert-danger alter-dismissable fade show" role="alert">
+    <div class="alert alert-danger alter-dismissable fade show " role="alert ">
         {{ message }}
-        <button type="button" class="close" data-dismiss="alert">
-            <span aria-hidden="true">&times;</span>
+        <button type="button " class="close " data-dismiss="alert ">
+            <span aria-hidden="true ">&times;</span>
           </button>
     </div>
     {% else %}
-    <div class="alert alert-success alter-dismissable fade show" role="alert">
+    <div class="alert alert-success alter-dismissable fade show " role="alert ">
         {{ message }}
-        <button type="button" class="close" data-dismiss="alert">
-            <span aria-hidden="true">&times;</span>
+        <button type="button " class="close " data-dismiss="alert ">
+            <span aria-hidden="true ">&times;</span>
           </button>
     </div>
     {% endif %} {% endfor %} {% endif %} {% endwith %}
-    <div class="container">
+    <div class="container ">
         {% block content %} {% endblock %}
     </div>
     <center>
-        <a href="https://aclima.io/">
-            <img src="static/images/aclima.jpeg" alt="Aclima " height=70px>
+        <a href="https://aclima.io/ ">
+            <img src="static/images/aclima.jpeg " alt="Aclima " height=120px>
         </a>
     </center>
 
