--- a/init/templates/home.html
+++ b/init/templates/home.html
@@ -11,31 +11,20 @@
     <h1>{{ msg }}</h1>
     {% endif %}
 
-    <h1>Upload new File</h1>
-
-    <form method="post" enctype="multipart/form-data">
+    <h1 align="center">Upload new File</h1>
+    <form method="post" enctype="multipart/form-data" align="center">
         <input type="file" name="file">
         <input type="submit" value="Upload">
-    </form>
 
-    <h1>Result:</h1>
+    </form>
+    <h1 align="center">Result:</h1>
     {% if img_src %}
     <img src="{{ img_src }}"> {% endif %} {% if extracted_text %}
-    <p> The extracted text from the image above is: <b> {{ extracted_text }} </b></p>
-
+    <p align="center"> The extracted text from the image above is: <b> {{ extracted_text }} </b></p>
     {% else %} The extracted text will be displayed here {% endif %}
 </body>
 
-<h4 align='center'>Fill In</h4>
-<div id="container" align='center'>
-    <input type='text' id='member' name='member' placeholder='Enter your repeat text' value='{{ extracted_text }}'>
-    <br>
-    <br>
-    <button type="submit" class="btn btn-primary" href="#" id="filldetails" onclick="addFields()">Calculate me!</button>
-    <p id="inputString"></p>
-</div>
-
-<h1 align="center">Notes</h1>
+<h1 align="center">Analyzed Text</h1>
 <ul class="list-group list-group-flush" id="notes">
     {% for note in user.notes %}
     <li class="list-group-item">
@@ -48,137 +37,33 @@
                 <span aria-hidden="true">&times;</span>
         </button>
         <!-- reuseNote({{note.id}}) -->
-        <button type="button" class="btn btn-outline-primary" id='btnID' value="{{note.input}}" onClick="reapply(value)">
-            <span aria-hidden="true">copy input</span>
+        <button type="button" class="btn btn-outline-primary" id='btnID' value="{{note.input}}" onClick="reapply(value) ">
+            <span aria-hidden="true ">copy input</span>
         </button>
         <script>
             function reapply(value) {
-                var dummy = document.createElement("textarea");
+                var dummy = document.createElement("textarea ");
                 document.body.appendChild(dummy);
                 dummy.value = value;
                 dummy.select();
-                document.execCommand("copy");
+                document.execCommand("copy ");
                 document.body.removeChild(dummy);
-                fetch("/reuse-note", {
-                    method: "POST",
+                fetch("/reuse-note ", {
+                    method: "POST ",
                     body: JSON.stringify({}),
                 }).then((_res) => {
-                    window.location.href = "/";
+                    window.location.href = "/ ";
                 });
-            }
-
-            function copy(id, notes) {
-                // for (note in user.notes) {
-                //     console.log(note)
-                // }
-                console.log(notes[id])
-            }
-
-
-            function a1_onclick(id) {
-                string = document.getElementById(id);
-                console.log(string)
             }
         </script>
     </li>
     {% endfor %}
 </ul>
-<form method="POST">
-    <input type="text" name="note" id="note" class="form-control" value='{{ extracted_text }}'>
+<form method="POST ">
+    <input type="text " name="note " id="note " class="form-control " value='{{ extracted_text }}'>
     <br />
-    <div align="center">
-        <button type="submit" id="addNote" class="btn btn-primary">Add Note</button>
+    <div align="center ">
+        <button type="submit " id="addNote " class="btn btn-primary " style=" border:#1C4870; background-color: #1C4870; ">Add Text</button>
     </div>
 </form>
-<br>
-
-<script>
-    function performClear(text_input) {
-        console.log("check out" + text_input)
-        document.getElementById("member").value = ``;
-    }
-    var count = 0;
-    let inputs_array = [];
-
-    function recycleNote(noteId) {
-        console.log(noteId)
-        string = document.getElementsByClassName("list-group-item")[noteId].innerText
-        console.log(string)
-    }
-
-
-
-
-
-
-    function addFields() {
-        count++;
-        var container = document.getElementById("container");
-        var input = document.createElement("input");
-        input.type = "text";
-        input.id = "input";
-        input.value = document.getElementById("member").value;
-        inputs_array.push(input.value)
-        console.log("inputs_array" + inputs_array)
-
-        //calculate the pairs
-        var text_input = document.createElement("text_input");
-        text_input.type = "text";
-        var text_input = document.getElementById("member").value;
-
-        console.log(input);
-        var neighbour_count = {};
-        var words = text_input.split(" ")
-        words = words.map(function(x) {
-            return (x.toLowerCase()).replace(/[.,\/#!$%\^&\*;:{}=\-_`~()]/g, "");
-        })
-        console.log((words))
-            // make lowercase
-        console.log(words);
-        for (var [index, element] of words.entries()) {
-            if (index + 1 < words.length) {
-                var wordPair = [];
-                if (element > words[index + 1]) {
-                    var wordPair = [element, words[index + 1]]
-                } else {
-                    var wordPair = [words[index + 1], element]
-                }
-                console.log("wordPair is: " + wordPair)
-                if (wordPair in neighbour_count) {
-                    neighbour_count[wordPair] += 1
-                } else {
-                    neighbour_count[wordPair] = 1
-                }
-            }
-        }
-        container.appendChild(document.createElement("br"));
-        container.appendChild(document.createTextNode("Result:  "));
-        container.appendChild(document.createTextNode(JSON.stringify(neighbour_count)));
-
-        // previous_input button announces previous input used
-        var name = `${count}`
-        console.log("ceers " + this.text_input)
-        var $previous_input = $('<input name=`${name}` type="button" onclick="performClear(`${text_input}`)" value="use previous input" />')
-        $previous_input.appendTo(container);
-        $previous_input.click(function() {
-            console.log("Called " + count + " times" + text_input);
-            console.log(inputs_array[count - 1]);
-            if (input) {
-                var input_el = document.getElementById("member");
-                input_el.innerHTML = text_input;
-            }
-            var dummy = document.createElement("textarea");
-            document.body.appendChild(dummy);
-            dummy.value = text_input;
-            dummy.select();
-            document.execCommand("copy");
-            /* Alert the copied text */
-            alert("Copied the original input: " + dummy.value)
-            document.body.removeChild(dummy);
-        });
-
-        container.appendChild(document.createElement("br"));
-        console.log(container)
-    }
-</script>
-{% endblock %}
+<br> {% endblock %}
