--- a/init/templates/signup.html
+++ b/init/templates/signup.html
@@ -18,6 +18,6 @@
         <input type="password" class="form-control" id="password2" name="password2" placeholder="Kindly confirm your password" />
     </div>
     <br />
-    <button type="submit" class="btn btn-primary">Submit</button>
+    <button type="submit" class="btn btn-primary" style=" border:#1C4870; background-color: #1C4870; ">Submit</button>
 </form>
 {% endblock %}
