--- a/init/templates/home.html
+++ b/init/templates/home.html
@@ -40,7 +40,6 @@
         <button type="button" name="close " id="close" class="close" onClick="deleteNote({{note.id}})">
                 <span aria-hidden="true">&times;</span>
         </button>
-        <!-- reuseNote({{note.id}}) -->
         <button type="button" class="btn btn-outline-primary" id='btnID' value="{{note.input}}" onClick="reapply(value)">
             <span aria-hidden="true">copy input</span>
         </button>
@@ -57,6 +56,17 @@
                 fetch("/reuse-note", {
                     method: "POST",
                     body: JSON.stringify({}),
+                }).then((_res) => {
+                    window.location.href = "/";
+                });
+            }
+
+            function deleteNote(noteId) {
+                fetch("/delete-note", {
+                    method: "POST",
+                    body: JSON.stringify({
+                        noteId: noteId
+                    }),
                 }).then((_res) => {
                     window.location.href = "/";
                 });
